[gd_scene load_steps=5 format=2]

[ext_resource path="res://Ball/Disk.obj" type="ArrayMesh" id=1]
[ext_resource path="res://Ball/Ball3D.gd" type="Script" id=2]

[sub_resource type="SpatialMaterial" id=1]

[sub_resource type="CylinderShape" id=2]
radius = 2.0

[node name="Ball" type="RigidBody" groups=[
"balls",
]]
contacts_reported = 1
contact_monitor = true
axis_lock_linear_z = true
axis_lock_angular_x = true
axis_lock_angular_y = true
axis_lock_angular_z = true
script = ExtResource( 2 )

[node name="Visuals" type="Spatial" parent="."]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0 )

[node name="Disk" type="MeshInstance" parent="Visuals"]
transform = Transform( -1.62921e-07, 0, -1, 0, 1, 0, 1, 0, -1.62921e-07, 0, 0, 0 )
mesh = ExtResource( 1 )
material/0 = SubResource( 1 )

[node name="EnergyTimer" type="Timer" parent="."]
wait_time = 0.01

[node name="LaunchTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0 )
shape = SubResource( 2 )

[node name="ChangeColorTimer" type="Timer" parent="."]
